package org.upskill.springboot.DTOs;

public class CategoryDTO {
}
