package org.upskill.springboot.Mappers;

public class CategoryMapper {
}
