@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class CategoryUI {
}

class Category {
    - id : String
    - designation : String
    + Category(designation)
}

class CategoryDTO {
    - id : String
    - designation : String
    + CategoryDTO(designation)
}

class CategoryController {
    + createCategory(CategoryDTO categoryDTO)
}

class CategoryService {
    + createCategory(CategoryDTO categoryDTO)
}

interface CategoryRepository {
    + save(Category category)
}

class CategoryMapper {
    + toEntity(CategoryDTO categoryDTO)
    + toDTO(Category category)
}

CategoryUI .> CategoryController
CategoryController ..> CategoryService
CategoryService ..> CategoryRepository
CategoryService ..> CategoryMapper
CategoryRepository "1" --> "*" Category : category
CategoryMapper ..> Category
CategoryMapper ..> CategoryDTO


@enduml